--- a/tgui/packages/tgui/styles/components/Tooltip.scss
+++ b/tgui/packages/tgui/styles/components/Tooltip.scss
@@ -1,24 +1,17 @@
-/**
- * Copyright (c) 2020 Aleksej Komarov
- * SPDX-License-Identifier: MIT
- */
+@use '../base';
 
-@use '../base.scss';
-@use '../functions.scss' as *;
-
-$color: #ffffff !default;
-$background-color: #000000 !default;
-$border-radius: base.$border-radius !default;
+$color: 0 !default;
+$background-color: 0 !default;
+$border-radius: 0 !default;
 
 .Tooltip {
-  z-index: 2;
-  padding: 0.5em 0.75em;
+  backdrop-filter: var(--tooltip-blur);
+  background-color: var(--tooltip-background);
+  border-radius: var(--tooltip-border-radius);
+  box-shadow: 0.1em 0.1em 1.25em -0.1em hsla(0, 0%, 0%, 0.5);
+  color: var(--tooltip-color);
+  max-width: base.em(250px);
+  padding: var(--space-m) var(--space-l);
   pointer-events: none;
   text-align: left;
-  transition: opacity 150ms ease-out;
-  background-color: $background-color;
-  color: $color;
-  box-shadow: 0.1em 0.1em 1.25em -0.1em rgba(0, 0, 0, 0.5);
-  border-radius: $border-radius;
-  max-width: base.em(250px);
 }
