--- a/tgui/packages/tgui/styles/interfaces/PreferencesMenu.scss
+++ b/tgui/packages/tgui/styles/interfaces/PreferencesMenu.scss
@@ -7,6 +7,8 @@ $department_map: (
   'Assistant': var(--color-gray),
   'Captain': colors.fg(var(--color-blue)),
   'Cargo': var(--color-brown),
+  //only the first word matters, apparently.
+  'Central': #86ff82,
   'Command': var(--color-yellow),
   'Security': var(--color-red),
   'Engineering': hsl(from var(--color-orange) h s calc(l + 7.5)),
@@ -137,8 +139,10 @@ $department_map: (
           }
 
           background: colors.fg($color-value);
-          border: var(--border-thickness-small) outset colors.fg($color-value);
           color: black;
+          border: var(--border-thickness-small) outset colors.fg($color-value);
+          border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+          border-left: 2px solid rgba(0, 0, 0, 0.3);
 
           > * {
             height: calc(100% + 0.2em);
@@ -146,7 +150,6 @@ $department_map: (
           }
 
           .options {
-            margin-right: var(--space-xxs);
             background: hsla(0, 0%, 0%, 0.2);
             height: 100%;
           }
@@ -164,7 +167,7 @@ $department_map: (
           }
 
           .job-name {
-            font-size: 17px;
+            font-size: 16px;
           }
         }
       }
